fixed the gid issue on tablet screen

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,7 +139,7 @@
 	/*home page=================================*/
 
 	/*==============primary structure==============*/
-	.container {
+	.container-fluid {
 		max-width: 100%;
 		margin: 0 auto;
 		overflow-y: hidden;
@@ -169,11 +169,12 @@
 	button.buttonsmall {
 		text-align: center;
 		background-color: #558C89;
-		width: 150px;
-		height: 50px;
+		width: 100px;
+		height: 30px;
 		font-family: Lato,sans-serif;
 		border: none;
 		color: white;
+		font-size: 10px;
 	}
 
 	section.module p:last-child {
@@ -237,21 +238,14 @@
 	/*================div======================*/
 
 	div.mission {
-		width: 100%;
+		width: 60%;
 
 	}
 
-	div.gap {
-		height: 2%;
-		width: 100%;
-		background-color: black;
-		margin-top: 5%;
-
-	}
 
 	div.vet-recommend {
-		width: 100%;
-		height: 50 vh;
+		width: 40%;
+		height: 250 vh;
 		text-align: center;
 		margin-top: 10%;
 	}
@@ -259,7 +253,7 @@
 	div.description h2 {
 		color: black;
 		font-family: 'Lato', sans-serif;
-		font-size: 20px;
+		font-size: 16px;
 		font-weight: 400;
 		text-align: center;
 		text-transform: uppercase;
@@ -270,7 +264,7 @@
 	div.description h4 {
 		font-family: 'Lato', sans-serif;
 		color: black;
-		font-size: 16px;
+		font-size: 12px;
 		font-weight: 350;
 		text-align: center;
 		text-transform: uppercase;
@@ -430,7 +424,7 @@
 	/*home page=================================*/
 
 	/*==============primary structure==============*/
-	.container {
+	.container-fluid {
 		max-width: 100%;
 		margin: 0 auto;
 		overflow-y: hidden;
